--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <span class="text-primary">Ingle</span>
           </h1>
           <div class="subheading mb-5">Mtech, CSE, IIT Madras, Chennai·
-            <a href="mailto:name@email.com">IJaya@cse.iitm.ac.in</a>
+            <a href="mailto:ijaya@cse.iitm.ac.in">IJaya@cse.iitm.ac.in</a>
           </div>
           <p class="mb-5">I am currently Master's student at IIT-Madras, Part of RISE Group. I have done my Bachelors from IET-DAVV, Indore.</p>
           <ul class="list-inline list-social-icons mb-0">
